// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyNavigator has a static method which identifies the keystroke from the key " " 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "A" 1`] = `null`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "ArrowDown" 1`] = `
{
  "action": "next",
  "keystroke": "down",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "ArrowLeft" 1`] = `
{
  "action": "previous",
  "keystroke": "left",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "ArrowRight" 1`] = `
{
  "action": "next",
  "keystroke": "right",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "ArrowUp" 1`] = `
{
  "action": "previous",
  "keystroke": "up",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Backspace" 1`] = `
{
  "action": "delete",
  "keystroke": "backspace",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Del" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Delete" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Down" 1`] = `
{
  "action": "next",
  "keystroke": "down",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Enter" 1`] = `
{
  "action": "validate",
  "keystroke": "enter",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Esc" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Escape" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Insert" 1`] = `null`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Left" 1`] = `
{
  "action": "previous",
  "keystroke": "left",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Right" 1`] = `
{
  "action": "next",
  "keystroke": "right",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Spacebar" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator has a static method which identifies the keystroke from the key "Up" 1`] = `
{
  "action": "previous",
  "keystroke": "up",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key " " when being in mode "both" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key " " when being in mode "horizontal" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key " " when being in mode "vertical" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "A" when being in mode "both" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "A" when being in mode "horizontal" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "A" when being in mode "vertical" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowDown" when being in mode "both" 1`] = `
{
  "action": "next",
  "keystroke": "down",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowDown" when being in mode "horizontal" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowDown" when being in mode "vertical" 1`] = `
{
  "action": "next",
  "keystroke": "down",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowLeft" when being in mode "both" 1`] = `
{
  "action": "previous",
  "keystroke": "left",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowLeft" when being in mode "horizontal" 1`] = `
{
  "action": "previous",
  "keystroke": "left",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowLeft" when being in mode "vertical" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowRight" when being in mode "both" 1`] = `
{
  "action": "next",
  "keystroke": "right",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowRight" when being in mode "horizontal" 1`] = `
{
  "action": "next",
  "keystroke": "right",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowRight" when being in mode "vertical" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowUp" when being in mode "both" 1`] = `
{
  "action": "previous",
  "keystroke": "up",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowUp" when being in mode "horizontal" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "ArrowUp" when being in mode "vertical" 1`] = `
{
  "action": "previous",
  "keystroke": "up",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Backspace" when being in mode "both" 1`] = `
{
  "action": "delete",
  "keystroke": "backspace",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Backspace" when being in mode "horizontal" 1`] = `
{
  "action": "delete",
  "keystroke": "backspace",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Backspace" when being in mode "vertical" 1`] = `
{
  "action": "delete",
  "keystroke": "backspace",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Del" when being in mode "both" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Del" when being in mode "horizontal" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Del" when being in mode "vertical" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Delete" when being in mode "both" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Delete" when being in mode "horizontal" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Delete" when being in mode "vertical" 1`] = `
{
  "action": "delete",
  "keystroke": "delete",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Down" when being in mode "both" 1`] = `
{
  "action": "next",
  "keystroke": "down",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Down" when being in mode "horizontal" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Down" when being in mode "vertical" 1`] = `
{
  "action": "next",
  "keystroke": "down",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Enter" when being in mode "both" 1`] = `
{
  "action": "validate",
  "keystroke": "enter",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Enter" when being in mode "horizontal" 1`] = `
{
  "action": "validate",
  "keystroke": "enter",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Enter" when being in mode "vertical" 1`] = `
{
  "action": "validate",
  "keystroke": "enter",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Esc" when being in mode "both" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Esc" when being in mode "horizontal" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Esc" when being in mode "vertical" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Escape" when being in mode "both" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Escape" when being in mode "horizontal" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Escape" when being in mode "vertical" 1`] = `
{
  "action": "cancel",
  "keystroke": "escape",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Insert" when being in mode "both" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Insert" when being in mode "horizontal" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Insert" when being in mode "vertical" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Left" when being in mode "both" 1`] = `
{
  "action": "previous",
  "keystroke": "left",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Left" when being in mode "horizontal" 1`] = `
{
  "action": "previous",
  "keystroke": "left",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Left" when being in mode "vertical" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Right" when being in mode "both" 1`] = `
{
  "action": "next",
  "keystroke": "right",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Right" when being in mode "horizontal" 1`] = `
{
  "action": "next",
  "keystroke": "right",
  "mode": "horizontal",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Right" when being in mode "vertical" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Spacebar" when being in mode "both" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Spacebar" when being in mode "horizontal" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Spacebar" when being in mode "vertical" 1`] = `
{
  "action": "validate",
  "keystroke": "spacebar",
  "mode": "both",
  "type": "control",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Up" when being in mode "both" 1`] = `
{
  "action": "previous",
  "keystroke": "up",
  "mode": "vertical",
  "type": "move",
}
`;

exports[`KeyNavigator identifies the keystroke from the key "Up" when being in mode "horizontal" 1`] = `null`;

exports[`KeyNavigator identifies the keystroke from the key "Up" when being in mode "vertical" 1`] = `
{
  "action": "previous",
  "keystroke": "up",
  "mode": "vertical",
  "type": "move",
}
`;
